Coverity analysis defect 172242: Parse warning

XMLWordPrintableJSON

    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main/src/mongo/s/query/planner/cluster_aggregate.cpp:739: PW.PARAMETER_HIDDEN 172242 declaration hides parameter "expCtx" (declared at line 731)

            Assignee:
            Sander Verwimp (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: