SERVER-102529: Rename occurrence of expCtx inside of lambda  (#38356)

GitOrigin-RevId: 4cd9a4a9f8720bf09539feca8b361a2d235610d3